# cpp-lab-2

./: CMakeLists.txt  file.txt  main.cpp
src/: App.cpp  App.h
src/Service/FileService/: FileWriter.cpp  FileWriter.h
